# ras_group8_platform

./: CMakeLists.txt  README.md  package.xml  serial numbers and other stuff
config/: default.yaml
include/ras_group8_platform/: Platform.hpp
launch/: ras_group8_platform.launch
src/: Platform.cpp  platform_node.cpp
test/: test_platform.cpp
