<package>
 <name>ras_group8_platform</name>
  <version>0.1.0</version>
  <description>
    Platform package.
  </description>
  <license>BSD</license>

  <url type="website">https://github.com/RAS17-Group-8/ras_group8_platform</url>

  <maintainer email="seb.lindberg@gmail.com">Sebastian Lindberg</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
